feat: 바나나 수량 필드 추가
각 과일 별 옵셔널 바인딩?? 추가 작업 필요 -> text 필드에 넣을 시 String으로 변화 필요

--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -226,6 +226,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="StockBanana" destination="gvk-pA-Lw5" id="zTH-fe-7RO"/>
                         <outlet property="StockStrawberry" destination="Qas-vP-td6" id="PF6-Fg-VSm"/>
                         <segue destination="Yu1-lM-nqp" kind="show" id="UWv-HQ-gyc"/>
                     </connections>
