--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -243,11 +243,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bananaLabel" destination="gvk-pA-Lw5" id="M6b-6n-2su"/>
-                        <outlet property="kiwiLabel" destination="FZq-de-TJG" id="OVn-py-APB"/>
-                        <outlet property="mangoLabel" destination="3Ce-SU-JeH" id="8ff-qD-rze"/>
-                        <outlet property="pineappleLabel" destination="ccQ-Dk-PuY" id="n8P-DZ-yhQ"/>
-                        <outlet property="strawberryLabel" destination="Qas-vP-td6" id="e6Z-ii-H4T"/>
+                        <outletCollection property="labels" destination="Qas-vP-td6" collectionClass="NSMutableArray" id="llP-yd-TR7"/>
+                        <outletCollection property="labels" destination="gvk-pA-Lw5" collectionClass="NSMutableArray" id="Vg6-Cc-waz"/>
+                        <outletCollection property="labels" destination="FZq-de-TJG" collectionClass="NSMutableArray" id="cga-Da-ad1"/>
+                        <outletCollection property="labels" destination="3Ce-SU-JeH" collectionClass="NSMutableArray" id="b9W-cI-hub"/>
+                        <outletCollection property="labels" destination="ccQ-Dk-PuY" collectionClass="NSMutableArray" id="rbG-gD-Xd3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -455,16 +455,16 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bananaLabel" destination="gKu-86-RhI" id="9X5-79-VHB"/>
-                        <outlet property="bananaStepper" destination="O5s-2N-3iP" id="PZE-cm-eQD"/>
-                        <outlet property="kiwiLabel" destination="ZDv-1m-HBY" id="Xyg-o3-H3w"/>
-                        <outlet property="kiwiStepper" destination="klA-59-Nu4" id="yVo-Ht-4vZ"/>
-                        <outlet property="mangoLabel" destination="YJI-ER-LJR" id="W3L-n9-AxR"/>
-                        <outlet property="mangoStepper" destination="xbn-6P-grO" id="20L-vg-CL2"/>
-                        <outlet property="pineappleLabel" destination="MpT-VW-hCb" id="m8w-Xi-MfY"/>
-                        <outlet property="pineappleStepper" destination="Rcr-xr-eqz" id="E6o-Ga-CdP"/>
-                        <outlet property="strawberryLabel" destination="0yV-kn-zaT" id="95A-xI-Cyr"/>
-                        <outlet property="strawberryStepper" destination="ZQk-f4-zrz" id="iHh-c9-9fc"/>
+                        <outletCollection property="labels" destination="0yV-kn-zaT" collectionClass="NSMutableArray" id="Ir4-lQ-YaJ"/>
+                        <outletCollection property="labels" destination="gKu-86-RhI" collectionClass="NSMutableArray" id="ZuV-FN-kD1"/>
+                        <outletCollection property="labels" destination="ZDv-1m-HBY" collectionClass="NSMutableArray" id="4Tt-2c-Ugd"/>
+                        <outletCollection property="labels" destination="YJI-ER-LJR" collectionClass="NSMutableArray" id="j9c-Lu-l8t"/>
+                        <outletCollection property="labels" destination="MpT-VW-hCb" collectionClass="NSMutableArray" id="PpG-wO-2Gd"/>
+                        <outletCollection property="Stepper" destination="ZQk-f4-zrz" collectionClass="NSMutableArray" id="W1e-hQ-wVs"/>
+                        <outletCollection property="Stepper" destination="O5s-2N-3iP" collectionClass="NSMutableArray" id="vZs-QG-TQI"/>
+                        <outletCollection property="Stepper" destination="klA-59-Nu4" collectionClass="NSMutableArray" id="982-F5-UQV"/>
+                        <outletCollection property="Stepper" destination="xbn-6P-grO" collectionClass="NSMutableArray" id="CfM-FW-feu"/>
+                        <outletCollection property="Stepper" destination="Rcr-xr-eqz" collectionClass="NSMutableArray" id="vhZ-Av-oMr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ieh-6D-g1l" sceneMemberID="firstResponder"/>
